--- a/Importing_Embeddings.ipynb
+++ b/Importing_Embeddings.ipynb
@@ -6,7 +6,6 @@
       "name": "Importing Embeddings",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPkujsJGiGSvuWJq+ytfrt8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,6 +53,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "TIeIqlJEoQJz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "%cd histwords/"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "1gbMntqxbyi1",
         "colab_type": "code",
         "colab": {}
@@ -94,6 +106,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "avtnJotSgbhG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!python nish.py"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qfNJXg29o15J",
         "colab_type": "code",
         "colab": {}
       },
